Fix: min height button overlapping issue with the elements (#28)

--- a/src/components/ContentPicker/Content.scss
+++ b/src/components/ContentPicker/Content.scss
@@ -2,7 +2,7 @@
 
 .bcp-content {
     display: flex;
-    flex: 1;
+    flex: 1 0 160px;
     flex-direction: column;
     position: relative;
 }
