--- a/src/components/ContentPicker/ItemList.scss
+++ b/src/components/ContentPicker/ItemList.scss
@@ -2,7 +2,6 @@
 
 .bcp-item-grid {
     flex: 1;
-    min-height: 300px;
 
     // sass-lint:disable class-name-format
     .ReactVirtualized__Table__Grid {
