--- a/src/components/ContentUploader/UploadState.scss
+++ b/src/components/ContentUploader/UploadState.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex: 1;
     justify-content: center;
-    min-height: 300px;
     position: relative;
     text-align: center;
 
