--- a/src/components/SubHeader/SubHeader.scss
+++ b/src/components/SubHeader/SubHeader.scss
@@ -5,7 +5,7 @@
     border-bottom: 1px solid $off-white;
     box-shadow: 0 4px 6px -2px $transparent-black;
     display: flex;
-    height: 50px;
+    flex: 0 0 50px;
     justify-content: space-between;
     padding: 0 25px;
 
