--- a/src/components/base.scss
+++ b/src/components/base.scss
@@ -12,6 +12,7 @@
     height: 100%;
     letter-spacing: .13px;
     margin: 0;
+    min-width: 350px;
     outline: none;
     overflow: hidden;
     padding: 0;
